--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#b22222" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,600,700&display=swap&amp;subset=thai" rel="stylesheet" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Kanit:300,400,500,600,700&display=swap&amp;subset=thai" rel="stylesheet" /> -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@200;400&display=swap" rel="stylesheet" /> -->
     <title>Puchida Line Channel</title>
   </head>
