fix: add google-site-verification tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
     <meta name="theme-color" content="#b22222" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <!-- Google Bot -->
+    <meta name="google-site-verification" content="_mYWZ-Fgcf-ELVEKJ2PphPm1nNqvPI-uB6W88s-n71E" />
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="google" content="notranslate" />
