--- a/index.html
+++ b/index.html
@@ -2,18 +2,31 @@
 <html lang="th">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no"
+    />
     <meta name="theme-color" content="#b22222" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <meta name="google-site-verification" content="_mYWZ-Fgcf-ELVEKJ2PphPm1nNqvPI-uB6W88s-n71E" />
+    <meta
+      name="google-site-verification"
+      content="_mYWZ-Fgcf-ELVEKJ2PphPm1nNqvPI-uB6W88s-n71E"
+    />
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="google" content="notranslate" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Miss Puchida</title>
-    <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/pvdbsmf@1.0.0/dist/pvdbsmf.min.js" defer></script>
+    <script
+      src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"
+      type="module"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/pvdbsmf@1.0.0/dist/pvdbsmf.min.js"
+      type="module"
+      defer
+    ></script>
   </head>
   <body>
     <div id="root"></div>
